<resources>
    <string name="app_name">EduLib</string>
    <string name="i_accept_the_term_of_use_privacy_policy"><![CDATA[I accept the Term of Use & Privacy Policy]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="textview">Please fill this form an account !</string>
    <string name="already_have_an_account_sign_in">Already have an account ? Sign In</string>
    <string name="sign_up1">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password1">Password</string>
    <string name="first_name">First Name</string>
    <string name="username1">Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up</string>
    <string name="materi_tv">MATERI</string>
    <string name="pengingat_tv">PENGINGAT</string>
    <string name="diskusi_tv">DISKUSI</string>
    <string name="tentang_tv">TENTANG</string>
    <string name="latihan_soal_tv">LATIHAN SOAL</string>
    <string name="info_tv">INFO</string>
    <string name="hai_user_tv">Hai, User</string>
    <string name="home">Beranda</string>
    <string name="materi">Materi</string>
    <string name="chat">Diskusi</string>
    <string name="emailDummy">edulab.com</string>
    <string name="webClientId">411550959740-lacfa6vnu3ajvs5aeicgd9fd77oq598p.apps.googleusercontent.com</string>
    <string name="confirm_password_lama">confirm password lama</string>
    <string name="password_lama">password_lama</string>
    <string name="logout">Log out</string>
    <string-array name="spinner">
        <item>Edit Profile</item>
        <item>Edit Password</item>
        <item>Log Out</item>
    </string-array>
    <string name="pilihpelajaran">Pilih Pelajaran</string>
    <string name="toolbarString">Pilih Universitas</string>
    <string name="ugm">
        <b>Pertumbuhan dan Perkembangan Pada Tumbuhan</b>
        \n\n
        - Pertumbuhan pada makhlukhidup ditandai dengan adanya pertambahan tinggi dan besar
        tubuh tumbuhan.
        \n
        - Perkembangan adalah suatu proses menuju ke arah kedewasaan.
        \n
        -Pertumuhan dan perkembangan tumbuhan berbiji dimulai dengan patahnya dormansi biji, pembelahan
        sel, perbesaran dan pemanjangan sel, diferensiasi, dan organogenesis.
        \n
        -Peringkat 1 di Indonesia, 5 di Asia Tenggara, 414 dunia versi Webometrics (2014)
        \n
        -Universitas Gadjah Mada merupakan Universitas dengan Sistem Penjaminan Mutu Terbaik di ASEAN bersama dengan National University of Singapore dan Chulalongkorn University.[butuh rujukan]
        \n
        -Beberapa Jurusan di UGM telah mendapatkan akreditasi internasional bergengsi dengan predikat A dan UGM menjadi universitas pertama di Indonesia yang meraih akreditasi bergengsi tersebut[butuh rujukan]
        \n\n
        <b>3. Fakultas yang tersedia:</b>
        \n\n
        Fakultas Biologi,
        \n
        Fakultas Ekonomika dan Bisnis,
        \n
        Fakultas Farmasi,
        \n
        Fakultas Filsafat,
        \n
        Fakultas Geografi,
        \n
        Fakultas Hukum,
        \n
        Fakultas Ilmu Budaya,
        \n
        Fakultas Ilmu Sosial dan Ilmu Politik,
        \n
        Fakultas Kedokteran, Kesehatan Masyarakat, dan Keperawatan,
        \n
        Fakultas Kedokteran Gigi,
        \n
        Fakultas Kedokteran Hewan,
        \n
        Fakultas Kehutanan,
        \n
        Fakultas MIPA (Matematika dan Ilmu Pengetahuan Alam),
        \n
        Fakultas Pertanian,
        \n
        Fakultas Peternakan,
        \n
        Fakultas Psikologi,
        \n
        Fakultas Teknik,
        \n
        Fakultas Teknologi Pertanian,
        \n
        Sekolah Vokasi
        </string>
    <string name="biologi">
         <b>BAB I : PERTUMBUHAN DAN PERKEMBANGAN PADA TUMBUHAN</b>
        \n\n\n
        A. PENDAHULUAN
        \n
        Pertumbuhan adalah adanya perubahan bentuk dikarenakan bertambahnya jumlah sel yang diikuti dengan pembesaran ukuran sel-sel yang membentuk makhluk hidup tersebut.
        \n
        Pertumbuhan merupakan proses irreversible atau tidak dapat kembali ke bentuk semula. Pertumbuhan pada makhluk hidup bisa dilihat dari ukuran yang semakin membesar. Pada tumbuhan sendiri ditandai dengan ukuran yang semakin bertambah. Akar dan batang yang semakin besar dan kuat.
        \n
        Perkembangan adalah proses perubahan fungsi organ-organ tubuh yang menjadi lebih kompleks. Perkembangan terjadi karena adanya diferensiasi sel. Diferensiasi sel adalah proses mekanisme yang menyebabkan sel dengan struktur dan fungsi yang sama menjadi berbeda, menjadi jaringan yang dewasa.
        \n
        Perkembangan pada tumbuhan contohnya dengan munculnya bunga sebagai alat reproduksi.
        \n\n\n
        B. PERTUMBUHAN PRIMER DAN SEKUNDER
        \n
        Pertumbuhan pada tumbuhan dibagi ke dalam dua bagian, yaitu:
        \n
        1. Pertumbuhan Primer
        \n
        Pertumbuhan primer merupakan pertumbuhan yang sangat dasar yang terjadi pada tumbuhan. Pertumbuhan primer terjadi karena sel-sel pada jaringan meristem melakukan pembelahan secara terus-menerus. Jaringan meristem terdapat pada ujung akar dan ujung batang. Karena itu, pertumbuhan primer mempengaruhi ukuran akar dan batang pada tumbuhan. Pertumbuhan primer diantaranya adalah pembentukan lapisan epidermis, korteks, xilem primer, floem primer juga empelur.
        \n\n
        Titik pertumbuhan primer dibagi menjadi 3 bagian:
        \n
        - Ujung akar : Sel-sel yang berkembang pada ujung akar membentuk jaringan-jaringan penyusun akar seperti: epidermis, endodermis, korteks dan silinder pusat
        \n
        - Daerah pemanjangan setelah daerah pembelahan :Di sini, pertumbuhan tumbuhan ditandai dengan bertambahnya ukuran tumbuhan tersebut.
        \n
        Daerah diferensiasi : Sel-sel yang bertumbuh di daerah diferensiasi berkembang membentuk sel-sel dengan fungsi khusus.
        \n\n
        2. Pertumbuhan Sekunder
        \n
        Disebut juga dengan meristem sekunder. Pertumbuhan ini ditandai dengan pelebaran batang, penambagan lingkar tahun dan jaringan parenkim yang menghubungkan kulit kayu dengan empelur atau disebut juga dengan jari-jari empelur.
        \n
        Pada xilem dan floem terdapat sel-sel kambium yang membelah aktif. Sel kambium yang membelah ke dalam akan membentuk xilem sekunder sedangkan yang membelah ke luar membentuk floem sekunder. Pertumbuhan sekunder ini biasanya dipengaruhi oleh musim. Aktivitas kambium akan meningkat pada musim penghujan dan menurun pada musim kemarau.
        \n
        Pertumbuhan primer dan sekunder ini akan terus berlangsung selama tumbuhan tersebut masih hidup.
        \n\n\n
        C. FAKTOR-FAKTOR YANG MEMPENGARUHI PERTUMBUHAN DAN PERKEMBANGAN
        \n
        Pertumbuhan pada tumbuhan pun tidak luput dari beberapa faktor yang dapat mempengaruhinya. Faktor -faktor yang mempengaruhi pertumbuhan dan perkembangan pada tumbuhan dibagi menjadi 2 golongan, yaitu
        \n
        1. Faktor Dalam
        \n
        Faktor dalam yang mempengaruhi pertumbuhan tumbuhan adalah terkatung pada gen dan hormon. Gen adalah unit yang berfungsi untuk pewarisan sifat. Gen berbentuk susunan DNA yang menentukan pewarisan yang sama dengan induknya. Sedangkan hormon adalah pembawa pesan kimia antar sel. Macam-macam hormon pada tumbuhan:
        \n - Auksin: dibentuk oleh ujung batang dan ujung akar pada tumbuhan dan berperan dalam proses pemanjangan sel dan merangsang kambium untuk membentuk xilem dan floem. Selain itu, Auksin pun berfungsi untuk pertumbuhan buah dan diferesiasi sel.
        \n - Giberelin: berfungsi dalam merangsang pembentukan serbuk sari dan membuat tumbuhan menjadi besar. Snagat berpengaruh dalam pertumbuhan akar, daun, bunga serta buah.
        \n - Sitokinin: berfungsi untuk memperpanjang usia jaringan tumbuhan.
        \n - Asam Absistat atau Dormin: berfungsi mempertahankan kelangsungan hidup tumbuhan saat ada pengaruh buruk dari lingkungan luar. Dormin pun berfungsi untuk menutup stomata di saat tumbuhan kekurangan air.
        \n - Gas Etilen: berfungsi untuk mempercepat pemasakan buah mentah juga membantu dalam penembalan batang.
        \n - Kalin: terbagi menjadi 4 bagian yaitu Rizokalin yang berfungsi untuk merangsang pembentukan akar, Kaukalin yang bersungsi untuk pertumbuhan batang, Filokalin yang berfungsi untuk pembentukan daun dan Antokalin yang berfungsi untuk merangsang pertumbuhan bunga.
        \n - Asam Traumalin: berfungsi untuk memperbaiki jaringa yang luka pada akar atau batang.
        \n\n
        2. Faktor Lua
        \n
        Faktor luar adalah materi lain selain tumbuhan itu sendiri yang berdampak pada tumbuhan tersebut. Beberapa di antaranya adalah:
        \n
        a) Nutrisi
        \n
        Seperti layaknya makhluk hidup pada umumnya, tumbuhan pun memerlukan makanan untuk dapat bertumbuh dan berkembang. Tumbuhan memerlukan unsur-unsur makanan dan mineral dalam jumlah tertentu. Nutrisi yang dibutuhkan oleh tumbuhan dalam jumlah banyak disebut makronutrien. Makronutrien di antaranya adalah karbon, oksigen, nutrigen, fospor, magnesium dan kalium. Sedangkan nutrisi yang dibutuhkan dalam jumlah sedikit disebut mikronutrien. Contoh mikronutrien adalah klor, besi, tembaga dan lain-lain.
        \n\n
        b) Cahaya Matahari
        \n
        Cahaya matahari sangat berpengaruh dalam proses pertumbuhan dan perkembangan pada tumbuhan hijau. Cahaya matahari digunakan untuk membantu proses fotosintesis. Fotosintesis adalah proses pembentukan makanan pada tumbuhan.
        \n\n
        Makanan yang dihasikan dalam proses fotosintesis inilah yang membantu pertumbuhan dan perkembangan pada tumbuhan. Respon tumbuhan pada cahaya matahari mempengaruhi pertumbuhan tumbuhan tersebutyang dikontrol oleh pigmen bernama fitokrom.
        \n\n
        c) Suhu
        \n
        Suhu di mana tumbuhan itu berada dapat mempengaruhi proses fotosintesis. Cara tumbuhan bertahan hidup akan suhu yang tidak tetap adalah dengan mengatur proses penguapan yang terjadi pada daun. Jika suhu tinggi, tumbuhan akan meningkatkan proses penguapan dan menurunkannya ketika suhu rendah.
        \n\n
        d) Kadar Air
        \n Air memiliki peranan penting dalam proses pertumbuhan dan perkembangan pada tumbuhan. Airlah yang mengatur laju pada proses fotosintesis dan mengedarkan hasilnya pada seluruh bagian tubuh sel tumbuhan.
        \n
 </string>
</resources>