
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivityIpa">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        />

    <ScrollView
        android:id="@+id/sc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/itb" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/line_spacing"
                android:padding="@dimen/padding_regular"
                android:text="@string/biologi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/nav_home5"
                    android:layout_width="139dp"
                    android:layout_height="59dp"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_home"
                    android:onClick="berandaClick"
                    android:text="@string/home"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/nav_materi5"
                    android:layout_width="139dp"
                    android:layout_height="59dp"
                    android:layout_marginBottom="-2dp"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_book"
                    android:onClick="materiClick"
                    android:text="@string/materi"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/nav_diskusi"
                    android:layout_width="139dp"
                    android:layout_height="59dp"
                    android:background="@color/colorPrimary"
                    android:drawableTop="@drawable/ic_chat"
                    android:onClick="diskusiClick"
                    android:text="@string/chat"
                    android:textColor="@android:color/white" />

            </LinearLayout>
            </LinearLayout>

    </ScrollView>



</RelativeLayout>